# Intelligent-Solar-Energy-Generation-Forecasting

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/PULL_REQUEST_TEMPLATE/: pull-request-template.md
knowledge/: battery_storage.md  energy_optimization.md  grid_management.md  solar_variability.md
models/: rag_chunks.json  rag_embeddings.npy  rag_index.pkl  rag_index_manifest.json  scaler.joblib
notebooks/: data.ipynb
src/: agent.py  rag.py  report_gen.py  tools.py  train_model.py
