[project]
name = "intelligent-solar-energy-generation-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"joblib",
	"matplotlib",
	"numpy",
	"pandas",
	"scikit-learn",
	"streamlit",
	"sentence-transformers",
]

[tool.uv]
package = false
