[project]
name = "intelligent-solar-energy-generation-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"joblib",
	"matplotlib",
	"numpy",
	"pandas",
	"scikit-learn",
	"streamlit",
	"sentence-transformers",
	"langgraph>=1.1.6",
	"langchain-core>=1.2.28",
	"groq>=1.1.2",
	"fpdf2",
]

[tool.uv]
package = false
